<resources>
    // welcome messages
    <string name="app_name">Premier League Darts</string>
    <string name="welcome_message">Murrayfield Sports Bar - Premier League Darts!</string>
    <string name="navigation_message">Use the menu bar to navigate to Fixtures, Results, Players, Weeks, League Tables &amp; Achievements.</string>

    // error / warning messages
    <string name="title_alert_dialog">Warning</string>
    <string name="message_alert_no_internet_connection">No internet connection</string>
    <string name="under_construction_message">This feature is currently under construction.</string>

    // menu titles
    <string name="best_leg_menu_text">Best Legs</string>
    <string name="fixtures_menu_text">Fixtures</string>
    <string name="high_finish_menu_text">High Finishes</string>
    <string name="home_menu_text">Home</string>
    <string name="players_menu_text">Players</string>
    <string name="player180_menu_text">180s</string>
    <string name="results_menu_text">Results</string>
    <string name="tables_menu_text">Tables</string>
    <string name="weeks_menu_text">Weeks</string>

    // activity titles
    <string name="title_activity_best_leg">Best Legs</string>
    <string name="title_activity_fixture">Fixtures</string>
    <string name="title_activity_high_finish">High Finishes</string>
    <string name="title_activity_player">Players</string>
    <string name="title_activity_player180">180s</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_table">Tables</string>
    <string name="title_activity_week">Weeks</string>

    // table labels
    <string name="board_label_text">Board</string>
    <string name="checkout_label_text">Checkout</string>
    <string name="date_label_text">Date</string>
    <string name="group_label_text">Group</string>
    <string name="legs_won_label_text">Legs</string>
    <string name="most_180s_label_text">Most 180s</string>
    <string name="name_label_text">Name</string>
    <string name="number_of_darts_label_text">Number of Darts</string>
    <string name="order_of_play_label_text">Order of Play</string>
    <string name="player_one_label_text">Player One</string>
    <string name="player_two_label_text">Player Two</string>
    <string name="total_180s_label_text">Total 180s</string>
    <string name="week_name_label_text">Week Name</string>

    <color name="white">#FFFFFF</color>
</resources>