<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/HorizontalScrollViewWeek"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <TableRow>
            <TextView android:text="@string/date_label_text"
                android:layout_width="250dp"
                android:layout_column="0"
                android:textSize="20sp">
            </TextView>
            <TextView android:text="@string/group_label_text"
                android:layout_width="100dp"
                android:layout_column="1"
                android:textSize="20sp">
            </TextView>
            <TextView android:text="@string/player_one_label_text"
                android:layout_width="140dp"
                android:layout_column="1"
                android:textSize="20sp">
            </TextView>
            <TextView android:text="@string/legs_won_label_text"
                android:layout_width="80dp"
                android:layout_column="1"
                android:textSize="20sp">
            </TextView>
            <TextView android:text="@string/player_two_label_text"
                android:layout_width="140dp"
                android:layout_column="1"
                android:textSize="20sp">
            </TextView>
            <TextView android:text="@string/legs_won_label_text"
                android:layout_width="80dp"
                android:layout_column="1"
                android:textSize="20sp">
            </TextView>
        </TableRow>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:id="@+id/result_activity"
                android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/white"
                tools:context="murrayfield.sportsbar.dartsapp.ResultActivity">

            </RelativeLayout>
        </ScrollView>
    </TableLayout>
</HorizontalScrollView>